src/quickcontrols/material/qquickmaterialstyle.cpp
@@ -2,6 +2,7 @@
 // SPDX-License-Identifier: LicenseRef-Qt-Commercial OR LGPL-3.0-only OR GPL-2.0-only OR GPL-3.0-only
 
 #include "qquickmaterialstyle_p.h"
+#include "qquickmaterialtheme_p.h"
 
 #include <QtCore/qdebug.h>
 #if QT_CONFIG(settings)
@@ -441,7 +442,8 @@ QQuickMaterialStyle::QQuickMaterialStyle(QObject *parent) : QQuickAttachedProper
     m_customBackground(globalBackgroundCustom),
     m_hasForeground(hasGlobalForeground),
     m_hasBackground(hasGlobalBackground),
-    m_theme(globalTheme),
+    m_systemTheme(globalTheme == System),
+    m_theme(effectiveTheme(globalTheme)),
     m_primary(globalPrimary),
     m_accent(globalAccent),
     m_foreground(globalForeground),
@@ -462,14 +464,26 @@ QQuickMaterialStyle::Theme QQuickMaterialStyle::theme() const
 
 void QQuickMaterialStyle::setTheme(Theme theme)
 {
-    if (theme == System)
-        theme = QQuickStylePrivate::isDarkSystemTheme() ? Dark : Light;
-
     m_explicitTheme = true;
-    if (m_theme == theme)
+
+    // If theme is System: m_theme is set to system's theme (Dark/Light)
+    // and m_systemTheme is set to true.
+    // If theme is Dark/Light: m_theme is set to the input theme (Dark/Light)
+    // and m_systemTheme is set to false.
+    const bool systemThemeChanged = (m_systemTheme != (theme == System));
+    // Check m_theme and m_systemTheme are changed.
+    if ((m_theme == effectiveTheme(theme)) && !systemThemeChanged)
         return;
 
-    m_theme = theme;
+    m_theme = effectiveTheme(theme);
+    m_systemTheme = (theme == System);
+    if (systemThemeChanged) {
+        if (m_systemTheme)
+            QQuickMaterialTheme::registerSystemStyle(this);
+        else
+            QQuickMaterialTheme::unregisterSystemStyle(this);
+    }
+
     propagateTheme();
     themeChange();
     if (!m_customAccent)
@@ -482,10 +496,14 @@ void QQuickMaterialStyle::setTheme(Theme theme)
 
 void QQuickMaterialStyle::inheritTheme(Theme theme)
 {
-    if (m_explicitTheme || m_theme == theme)
+    const bool systemThemeChanged = (m_systemTheme != (theme == System));
+    const bool themeChanged = systemThemeChanged || (m_theme != effectiveTheme(theme));
+    if (m_explicitTheme || !themeChanged)
         return;
 
-    m_theme = theme;
+    m_theme = effectiveTheme(theme);
+    m_systemTheme = (theme == System);
+
     propagateTheme();
     themeChange();
     if (!m_customAccent)
@@ -502,7 +520,10 @@ void QQuickMaterialStyle::propagateTheme()
     for (QQuickAttachedPropertyPropagator *child : styles) {
         QQuickMaterialStyle *material = qobject_cast<QQuickMaterialStyle *>(child);
         if (material)
-            material->inheritTheme(m_theme);
+            // m_theme is the effective theme, either Dark or Light.
+            // m_systemTheme indicates whether the theme is set by
+            // the system (true) or manually (false).
+            material->inheritTheme(m_systemTheme ? System : m_theme);
     }
 }
 
@@ -1424,7 +1445,7 @@ void QQuickMaterialStyle::initGlobals()
     QByteArray themeValue = resolveSetting("QT_QUICK_CONTROLS_MATERIAL_THEME", settings, QStringLiteral("Theme"));
     Theme themeEnum = toEnumValue<Theme>(themeValue, &ok);
     if (ok)
-        globalTheme = effectiveTheme(themeEnum);
+        globalTheme = themeEnum;
     else if (!themeValue.isEmpty())
         qWarning().nospace().noquote() << "Material: unknown theme value: " << themeValue;
 
